--- a/research/03_data_transformation.ipynb
+++ b/research/03_data_transformation.ipynb
@@ -120,9 +120,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\prati\\Desktop\\Project\\Text-Summarizer-End-to-End-Project\\venv\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "from textSummarizer.logging import logger\n",
@@ -132,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,24 +173,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-05-18 08:51:29,881: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2023-05-18 08:51:29,892: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2023-05-18 08:51:29,893: INFO: common: created directory at: artifacts]\n",
-      "[2023-05-18 08:51:29,894: INFO: common: created directory at: artifacts/data_transformation]\n"
+      "[2023-07-03 11:53:32,872: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2023-07-03 11:53:32,876: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2023-07-03 11:53:32,878: INFO: common: created directory at: artifacts]\n",
+      "[2023-07-03 11:53:32,879: INFO: common: created directory at: artifacts/data_transformation]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Map:   0%|          | 0/14732 [00:00<?, ? examples/s]d:\\Softwares\\anaconda3\\envs\\textS\\lib\\site-packages\\transformers\\tokenization_utils_base.py:3606: UserWarning: `as_target_tokenizer` is deprecated and will be removed in v5 of Transformers. You can tokenize your labels by using the argument `text_target` of the regular `__call__` method (either in the same call as your input texts if you use the same keyword arguments, or in a separate call.\n",
+      "Downloading (…)okenizer_config.json: 100%|██████████| 88.0/88.0 [00:00<00:00, 20.4kB/s]\n",
+      "c:\\Users\\prati\\Desktop\\Project\\Text-Summarizer-End-to-End-Project\\venv\\lib\\site-packages\\huggingface_hub\\file_download.py:133: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\prati\\.cache\\huggingface\\hub. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
+      "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to see activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
+      "  warnings.warn(message)\n",
+      "Downloading (…)lve/main/config.json: 100%|██████████| 1.12k/1.12k [00:00<00:00, 277kB/s]\n",
+      "Downloading (…)ve/main/spiece.model: 100%|██████████| 1.91M/1.91M [00:03<00:00, 603kB/s]\n",
+      "Downloading (…)cial_tokens_map.json: 100%|██████████| 65.0/65.0 [00:00<00:00, 21.7kB/s]\n",
+      "Map:   0%|          | 0/14732 [00:00<?, ? examples/s]c:\\Users\\prati\\Desktop\\Project\\Text-Summarizer-End-to-End-Project\\venv\\lib\\site-packages\\transformers\\tokenization_utils_base.py:3619: UserWarning: `as_target_tokenizer` is deprecated and will be removed in v5 of Transformers. You can tokenize your labels by using the argument `text_target` of the regular `__call__` method (either in the same call as your input texts if you use the same keyword arguments, or in a separate call.\n",
       "  warnings.warn(\n",
       "                                                                                                 \r"
      ]
